--- a/.bazelrc
+++ b/.bazelrc
@@ -4,15 +4,12 @@ common --copt=-fdiagnostics-color=always
 common --test_output=errors
 common --test_summary=terse
 common --enable_bzlmod
+common --enable_workspace
 
 # compilation_mode options below are `dbg` (debug symbols) `fastbuild`
 # (build as quickly as possible), and `opt` (turn on all optimizations)
 # use opt by default for performance evaluations
 common -c opt
-
-# evaluations don't need CGGI, and need OpenMP
-common --@heir//:enable_yosys=0
-common --@heir//:enable_openmp=1
 
 # prevents changes to PATH from causing a full rebuild
 common --incompatible_strict_action_env
