--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -25,6 +25,10 @@ bazel_dep(name = "rules_cc", version = "0.2.14")
 bazel_dep(name = "rules_go", version = "0.59.0")
 bazel_dep(name = "rules_python", version = "1.7.0")
 
+# llvm deps
+bazel_dep(name = "bazel_skylib", version = "1.8.2")
+bazel_dep(name = "rules_shell", version = "0.6.1")
+
 # openfhe deps
 bazel_dep(name = "rapidjson", version = "1.1.0.bcr.20250205")
 
