--- a/mlp/heir/openfhe/BUILD
+++ b/mlp/heir/openfhe/BUILD
@@ -1,54 +1,15 @@
 load("//bazel/openfhe:copts.bzl", "OPENFHE_LINKOPTS", "OPENMP_COPTS")
-load("@hc_pypi//:requirements.bzl", "requirement")
 load("@pybind11_bazel//:build_defs.bzl", "pybind_extension")
 load("@rules_cc//cc:cc_library.bzl", "cc_library")
 load("@rules_cc//cc:cc_test.bzl", "cc_test")
 load("@rules_heir//heir:heir_opt.bzl", "heir_opt")
 load("@rules_heir//heir:heir_translate.bzl", "heir_translate")
-load("@rules_python//python:py_binary.bzl", "py_binary")
-load("@rules_python//python:py_library.bzl", "py_library")
 load("@rules_python//python:py_test.bzl", "py_test")
-
-package(
-    default_visibility = ["//visibility:public"],
-)
-
-# Model specification
-py_library(
-    name = "mlp",
-    srcs = ["mlp.py"],
-    deps = [
-        requirement("torch"),
-    ],
-)
-
-# Training script
-py_binary(
-    name = "train",
-    srcs = ["train.py"],
-    deps = [
-        ":mlp",
-        requirement("torch"),
-        requirement("torchvision"),
-    ],
-)
-
-# Export from PyTorch to MLIR
-py_binary(
-    name = "convert_to_mlir",
-    srcs = ["convert_to_mlir.py"],
-    data = ["mlp_model.pth"],
-    deps = [
-        ":mlp",
-        requirement("torch"),
-        requirement("torch-mlir"),
-    ],
-)
 
 # Optimize and generate HEIR's OpenFHE dialect IR
 heir_opt(
-    name = "mlp_openfhe_heir",
-    src = "mlp.mlir",
+    name = "mlp_heir_opt",
+    src = "//mlp:mlp.mlir",
     generated_filename = "mlp.openfhe.mlir",
     passes = [
         "--annotate-module=backend=openfhe scheme=ckks",
@@ -60,7 +21,7 @@ heir_opt(
 # Codegen for OpenFHE C++ code
 heir_translate(
     name = "mlp_translate_cc",
-    src = ":mlp.openfhe.mlir",
+    src = "mlp.openfhe.mlir",
     generated_filename = "mlp.inc.cc",
     passes = [
         "--emit-openfhe-pke",
@@ -71,7 +32,7 @@ heir_translate(
 # Codegen for OpenFHE C++ header
 heir_translate(
     name = "mlp_translate_h",
-    src = ":mlp.openfhe.mlir",
+    src = "mlp.openfhe.mlir",
     generated_filename = "mlp.inc.h",
     passes = [
         "--emit-openfhe-pke-header",
@@ -81,7 +42,7 @@ heir_translate(
 
 # cc_library to bundle the generated C++ code
 cc_library(
-    name = "mlp_openfhe_heir_cc_lib",
+    name = "mlp_compiled_cc_lib",
     srcs = ["mlp.inc.cc"],
     hdrs = ["mlp.inc.h"],
     deps = ["@openfhe//:pke"],
@@ -91,7 +52,7 @@ cc_library(
 
 # Codegen for OpenFHE C++ pybindings
 heir_translate(
-    name = "mlp_openfhe.heir_translate_pybind",
+    name = "mlp_translate_pybind",
     src = "mlp.openfhe.mlir",
     passes = [
         "--openfhe-include-type=source-relative",
@@ -107,11 +68,11 @@ heir_translate(
 
 # Build the python extension module
 pybind_extension(
-    name = "mlp_openfhe_pybind",
+    name = "mlp_pybind",
     srcs = ["mlp_openfhe_bindings.cpp"],
     deps = [
-        ":mlp_openfhe.heir_translate_pybind",
-        ":mlp_openfhe_heir_cc_lib",
+        ":mlp_translate_pybind",
+        ":mlp_compiled_cc_lib",
         "@openfhe//:pke",
     ],
 )
@@ -119,28 +80,27 @@ pybind_extension(
 # HEIR OpenFHE interpreter shim, so that python code can
 # invoke the interpreted mode instead of the compiled mode.
 cc_library(
-    name = "mlp_interpreter_shim",
-    srcs = ["mlp_interpreter_shim.cpp"],
+    name = "interpreter_shim",
+    srcs = ["interpreter_shim.cpp"],
     deps = [
-        ":mlp_openfhe_heir_cc_lib",
         "@llvm-project//mlir:IR",
         "@llvm-project//mlir:Parser",
         "@openfhe//:pke",
+        "@heir//lib/Target/OpenFhePke:Interpreter",
     ],
 )
 
-
 # Test and time it
 py_test(
-    name = "mlp_openfhe_heir_test",
+    name = "mlp_compiled_test",
     size = "enormous",
-    srcs = ["mlp_heir_test.py"],
-    main = "mlp_heir_test.py",
+    srcs = ["mlp_compiled_test.py"],
+    main = "mlp_compiled_test.py",
     tags = [
         "requires-mem:28g",
     ],
     deps = [
-        ":mlp_openfhe_pybind",
+        ":mlp_pybind",
         "@abseil-py//absl/testing:absltest",
         "@hc_pypi//numpy",
         "@hc_pypi//torch",
